# rustycrab

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
code-review/: 01-security.md  02-error-handling.md  03-memory-crate.md  04-tools-crate.md  05-agent-orchestration.md  06-skills-store-core.md  07-gateway-channels.md  08-providers.md  09-concurrency-async.md  10-dependencies-build.md  README.md
crates/openclaw-agent/: Cargo.toml
crates/openclaw-agent/src/: lib.rs  runner.rs  sandbox.rs
crates/openclaw-bioauth/: Cargo.toml
crates/openclaw-bioauth/src/: challenge.rs  device.rs  error.rs  gate.rs  lib.rs  push.rs
crates/openclaw-channels/: Cargo.toml
crates/openclaw-channels/src/: channel.rs  lib.rs  webchat.rs
crates/openclaw-cli/: Cargo.toml
crates/openclaw-cli/src/: main.rs
crates/openclaw-core/: Cargo.toml
crates/openclaw-core/src/: capability.rs  error.rs  lib.rs  model.rs  types.rs
crates/openclaw-gateway/: Cargo.toml
crates/openclaw-gateway/src/: auth.rs  bioauth.rs  lib.rs  orchestrate.rs  rate_limit.rs  routes.rs  state.rs
crates/openclaw-gateway/static/: index.html
crates/openclaw-providers/: Cargo.toml
crates/openclaw-providers/src/: anthropic.rs  ollama.rs
crates/openclaw-skills/: Cargo.toml
crates/openclaw-skills/src/: lib.rs  prompt.rs  skill.rs  verify.rs
crates/openclaw-store/: Cargo.toml
crates/openclaw-store/src/: conversation.rs  lib.rs  secret.rs
crates/openclaw-tools/: Cargo.toml
crates/openclaw-tools/src/: browser.rs  gmail.rs  http_request.rs  lib.rs  pdf.rs  skill_create.rs  web_fetch.rs  web_search.rs
crates/rustykrab-agent/src/: harness.rs  lib.rs  router.rs  runner.rs  sandbox.rs  voting.rs
crates/rustykrab-channels/src/: signal.rs  telegram.rs
crates/rustykrab-cli/: Cargo.toml
crates/rustykrab-cli/src/: main.rs
crates/rustykrab-core/src/: error.rs  lib.rs  model.rs  orchestration.rs  tool.rs  types.rs
crates/rustykrab-gateway/src/: auth.rs  lib.rs  orchestrate.rs  origin.rs  rate_limit.rs  routes.rs  state.rs
crates/rustykrab-gateway/static/: index.html
crates/rustykrab-memory/: Cargo.toml
crates/rustykrab-memory/src/: backend.rs  bm25.rs  chunking.rs  config.rs  embedding.rs  extraction.rs  flusher.rs  lib.rs  (+7 more)
crates/rustykrab-providers/: Cargo.toml
crates/rustykrab-store/: Cargo.toml
(+58 files in other folders)
