[package]
name = "openclaw-bioauth"
description = "Push-based biometric phone authentication for OpenClaw"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
openclaw-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
sled.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
hex.workspace = true
base64.workspace = true
reqwest.workspace = true
sha2.workspace = true
thiserror.workspace = true
